Fix overflow bug of carousel.

--- a/css/reception/carousel.less
+++ b/css/reception/carousel.less
@@ -3,6 +3,7 @@
 .carousel(@height: 4em) {
     display: flex;
     height: @height;
+    overflow-x: auto;
     div.carousel-item {
         flex: none;
         display: flex;
